[package]
name = "doubly-linked-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thin-dst = "1.1.0"

[dev-dependencies]
detect-drop = { git = "https://github.com/Esu0/detect-drop", version = "0.1.0" }
debug-allocator = { git = "https://github.com/Esu0/debug-allocator", version = "0.1.2" }
